fix: Correção de overflow ao clicar eu um projeto

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,10 +14,7 @@
   --background: #0a141e;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+html {
   font-size: 16px;
 }
 
